--- a/environment.yml
+++ b/environment.yml
@@ -5,13 +5,13 @@ dependencies:
   - keras
   - tensorflow-gpu
   - tensorflow-estimator
-  - bitsandbytes==0.35.4
-  - transformers==4.26.0
+  - bitsandbytes
+  - transformers
   - triton
-  - torch==1.12.1
-  - torchvision==0.13.1
-  - diffusers[torch]==0.11.1
-  - decord==0.6.0
+  - torch
+  - torchvision
+  - diffusers[torch]
+  - decord
   - accelerate
   - tensorboard
   - modelcards
